; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_uart_emul.c_uart_reset.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_uart_emul.c_uart_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_softc = type { i8*, i8* }

@DEFAULT_RCLK = common dso_local global i32 0, align 4
@DEFAULT_BAUD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_softc*)* @uart_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uart_reset(%struct.uart_softc* %0) #0 {
  %2 = alloca %struct.uart_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.uart_softc* %0, %struct.uart_softc** %2, align 8
  %4 = load i32, i32* @DEFAULT_RCLK, align 4
  %5 = load i32, i32* @DEFAULT_BAUD, align 4
  %6 = sdiv i32 %4, %5
  %7 = sdiv i32 %6, 16
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = inttoptr i64 %9 to i8*
  %11 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %12 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  %13 = load i32, i32* %3, align 4
  %14 = ashr i32 %13, 16
  %15 = sext i32 %14 to i64
  %16 = inttoptr i64 %15 to i8*
  %17 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %18 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %17, i32 0, i32 0
  store i8* %16, i8** %18, align 8
  %19 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %20 = call i32 @rxfifo_reset(%struct.uart_softc* %19, i32 1)
  ret void
}

declare dso_local i32 @rxfifo_reset(%struct.uart_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
